# flip-companion

./: .gitignore  Cargo.toml  README.md  apps.toml  build.rs  install.sh  justfile
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml  release.yml
deploy/: 99-flip-companion-touch.rules
deploy/desktop/: flip-companion-desktop-reset  flip-companion-desktop-reset.desktop  flip-companion-disable-hhd-touch  flip-companion.desktop
deploy/gamemode/: 10-gamescope-session.conf  20-gamescope-lease.conf  flip-companion-touch-sudoers  flip-companion-touch-toggle  gamescope-lease-wrapper  sessions.d-steam
deploy/systemd/: flip-companion.service
deploy/udev/: 99-uinput.rules
kwin-script/: metadata.json
kwin-script/contents/code/: main.js
src/: app.rs  config.rs  main.rs  stats_history.rs
src/backend/: abort_guard.rs  app_launcher.rs  drm_lease.rs  drm_platform.rs  evdev_input.rs  gpu_renderer.rs  kwin_window.rs  mod.rs  sysinfo_stats.rs
src/backend/mock/: display.rs  input.rs  stats.rs  window.rs
src/compositor/: mod.rs  wayland_thread.rs
src/input/: keyboard_thread.rs  mod.rs
src/platform/: display.rs  input.rs  mod.rs  stats.rs  window.rs
src/types/: display.rs  mod.rs  stats.rs  window.rs
ui/: apps.slint  globals.slint  keyboard.slint  main.slint  shuttle.slint  stat_card.slint  stats.slint  top_bar.slint
