[package]
name = "flip-companion"
version = "0.1.0"
edition = "2021"
description = "Bottom-screen companion app for AYANEO Flip DS on Bazzite"
license = "MIT"
rust-version = "1.75"

[dependencies]
# UI framework — compiled from .slint files via build.rs
slint = "1"

# Async D-Bus client — talks to KScreen + KWin Script (Plasma 6)
zbus = { version = "4", default-features = false, features = ["tokio"] }

# System stats — CPU, GPU, RAM, battery, thermals
sysinfo = "0.32"

# Async runtime — bridges to Slint UI via mpsc channels
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "process", "fs"] }

# CLI argument parsing
clap = { version = "4", features = ["derive"] }

# Error handling
anyhow = "1"

# Low-level libc bindings — used for SCM_RIGHTS fd-passing
libc = "0.2"

# DRM/KMS bindings — used for mode-setting on the leased display
drm = "0.14"
drm-fourcc = "2"

# Async trait support for dyn-compatible platform traits
async-trait = "0.1"

# Wayland compositor framework — in-process compositor for app rendering
smithay = { version = "0.7", default-features = false, features = [
    "backend_drm",
    "backend_gbm",
    "backend_egl",
    "renderer_gl",
    "wayland_frontend",
] }

# GBM buffer management — scanout buffers for GPU rendering
gbm = { version = "0.18", default-features = false, features = ["drm-support"] }

# Event loop — drives the Wayland compositor thread
calloop = "0.14"

# Glob pattern matching for sysfs path discovery
glob = "0.3"

# Linux evdev uinput — virtual keyboard injection
evdev = "0.13"

# JSON parsing for KWin script D-Bus responses
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# TOML config parsing for apps panel
toml = "0.8"

[build-dependencies]
slint-build = "1"

[profile.release]
opt-level = "s"
lto = true
strip = true
codegen-units = 1
